2011-04-12  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        Apple movie trailers play only audio
        https://bugs.webkit.org/show_bug.cgi?id=58339
        <rdar://problem/9237606>

        No new tests, covered by existing layout and manual tests.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::mediaPlayerEngineUpdated): Do the logging before calling any functions.
        (WebCore::HTMLMediaElement::mediaPlayerFirstVideoFrameAvailable): New, if still displaying the poster 
            change the display mode to Video and force a style recalc so the video layer gets hooked
            up the the render tree.
        * html/HTMLMediaElement.h: Define new display mode, PosterWaitingForVideo, to signal that we
            want to stop displaying the poster as soon as the first frame of video is available.

        * html/HTMLVideoElement.cpp:
        (WebCore::HTMLVideoElement::setDisplayMode): Change display mode to PosterWaitingForVideo when
            we want to display Video but the media engines doesn't have the first frame yet.
        * html/HTMLVideoElement.h:
        (WebCore::HTMLVideoElement::shouldDisplayPosterImage): Update to return true when display mode
            is PosterWaitingForVideo.

        * manual-tests/media-elements/video-replaces-poster.html: Clean up bit-rot from patch changes.

        * platform/graphics/MediaPlayer.cpp:
        (WebCore::MediaPlayer::firstVideoFrameAvailable): New, passthrough from media engien to element.
        * platform/graphics/MediaPlayer.h:
        (WebCore::MediaPlayerClient::mediaPlayerFirstVideoFrameAvailable):

        * platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:
        (WebCore::MediaPlayerPrivateAVFoundation::MediaPlayerPrivateAVFoundation): Initialize 
            m_haveReportedFirstVideoFrame and m_playWhenFramesAvailable.