@@ -1,3 +1,14 @@
+2011-04-12  Stephanie Lewis  <slewis@apple.com>
+
+        Reviewed by Oliver Hunt.
+        https://bugs.webkit.org/show_bug.cgi?id=58280
+        Fix a layout test by correctly comparing enums, and not adding exceptions.
+
+        * bindings/js/SerializedScriptValue.cpp:
+        (WebCore::SerializedScriptValue::create):
+        (WebCore::SerializedScriptValue::deserialize):
+        * bindings/js/SerializedScriptValue.h:
+
 2011-04-12  Eric Carlson  <eric.carlson@apple.com>
 
         Reviewed by Simon Fraser.
